Change log for [[https://github.com/chalaev/cl-signal-handler][cl-signal-handler]].

* Updates for easier usage
For example, [[https://github.com/chalaev/cl-signal-handler][cl-signal-handler]] can be used to control a =Hunchentoot= web server.
** 02/10
1. renamed package =:server-log= → =:simple-log=
2. improved usability, see [[file:generated/example.lisp][example.lisp]]

* Almost stable
This code was written 2+ years before it was packaged and published, so I do not expect it to be changed a lot.

** Packaged and compiled
There are no built-in tests (defined with =deftest=) here; they are replaced by an example.

*** 2020-11-28
Added [[file:change-log.org][change-log.org]].

*** 2020-11-26
Started using my [[https://github.com/chalaev/lisp-goodies][lisp-goodies]] (:shalaev) package instead of including its files into the source code.