@@ -47,7 +47,7 @@ $(quicklispDir)/%.org: %.org
 	-@chgrp tmp $@
 
 generated/from/%.org: %.org generated/from/ generated/headers/
-	echo `emacsclient -e '(printangle "$<")'` | sed 's/"//g' > $@
+	echo `emacsclient -e "(progn (require 'version) (printangle \"$<\"))"` | sed 's/"//g' > $@
 	-@chgrp tmp $@ `cat $@`
 
 README.md: README.org
@@ -66,8 +66,8 @@ clean:
 %/:
 	[ -d $@ ] || mkdir -p $@
 
-version.org: change-log.org helpers/derive-version.el
-	emacsclient -e '(progn (load "$(CURDIR)/helpers/derive-version.el") (format-version "$<"))' | sed 's/"//g' > $@
+version.org: change-log.org
+	emacsclient -e "(progn (require 'version) (format-version \"$<\"))" | sed 's/"//g' > $@
 	@echo "← generated `date '+%m/%d %H:%M'` from [[file:$<][$<]]" >> $@
-	@echo "by [[file:helpers/derive-version.el][derive-version.el]]" >> $@
+	@echo "by [[https://github.com/chalaev/lisp-goodies/blob/master/packaged/version.el][version.el]]" >> $@
 	-@chgrp tmp $@
