@@ -1,13 +1,13 @@
 Simple kill-signall message acceptor for [[http://www.sbcl.org/][sbcl]].
 
 * Description
-A simple and reliable way to send messages to LISP services.
+A simple way to send messages to LISP services.
 
 * Prerequisites
 This code needs:
 1. =lfp.h= (provided by =libfixposix-dev= package in [[https://www.debian.org/][Debian]]),
 2. [[https://github.com/chalaev/cl-simple-logger][simple-log]]  – needed for debugging/logging, and
-3. [[https://github.com/chalaev/lisp-goodies][lisp-goodies]] (package named =:shalaev=),
+3. [[https://github.com/chalaev/lisp-goodies][lisp-goodies]] (CL package named =:shalaev= and [[https://github.com/chalaev/lisp-goodies/blob/master/packaged/version.el][version.el]]),
 so LISP should be able to =require= these two packages.
 
 For example, if =quicklisp= resides in =~/quicklisp/=,
@@ -40,9 +40,8 @@ and now the sender must delete the sub-directory =sdir= in order to allow others
 * Files
 1. [[file:signal-handler.org][signal-handler.org]] is the main file containing most of the code with comments,
 2. [[file:Makefile][Makefile]] compiles [[file:generated/example.lisp][generated/example.lisp]] into ~generated/example.bin~ and launches it,
-3. [[file:make.org][make.org]] contains log messages displayed by sucessfull =make= command,
-4. [[file:helpers/][helpers/*]] assist compilation, and
-5. [[file:packaged/signal-handler.tbz][packaged/signal-handler.tbz]] is the package archive.
+3. [[file:make.org][make.org]] contains log messages displayed by sucessfull =make= command, and
+4. [[file:packaged/signal-handler.tbz][packaged/signal-handler.tbz]] is the package archive.
 
 * Motivation
 [[https://github.com/death/dbus][dbus]] might have many fancy features, but on my computer =(ql:quickload :dbus)= downloads 55 other packages to satisfy [[https://github.com/death/dbus][dbus]]'es requirements,
