@@ -1,3 +1,3 @@
-1.0.0
-← generated 02/10 11:26 from [[file:change-log.org][change-log.org]]
-by [[file:helpers/derive-version.el][derive-version.el]]
+1.1.0
+← generated 06/29 11:38 from [[file:change-log.org][change-log.org]]
+by [[https://github.com/chalaev/lisp-goodies/blob/master/packaged/version.el][version.el]]
